--- a/styles/style.css
+++ b/styles/style.css
@@ -162,11 +162,69 @@ body {
 
 /* end of explore section */
 
+/* restaurants section */
+
+.restaurants {
+  margin-top: 3rem;
+}
+
+.restaurants-heading {
+  margin-bottom: 1rem;
+}
+/* .restaurants-img{
+  width:100%;
+} */
+
+/* .grid{
+  display:flex;
+} */
+
+.row-1,
+.row-2 {
+  width: 100%;
+}
+
+.restaurant-1 img,
+.restaurant-2 img,
+.restaurant-3 img,
+.restaurant-4 img{
+  width: 100%;
+  padding:4px 6px;
+  border-radius: 8px;
+}
+
+.row-1{
+  display: flex;
+ 
+  align-items: baseline;
+  flex-direction: row-reverse;
+
+}
+
+.row-2{
+  display: flex;
+
+  
+}
+.restaurants-1 img, .restaurant-4{
+  width: 150px;
+  height: 80px;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+.restaurants-2 img, .restaurant-3{
+  width: 200px;
+  height: 100px;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+/* end of restaurants section */
+
 /*media queries*/
 
 @media (min-width: 576px) {
-  .explore-heading{
-    margin-top:-25px;
+  .explore-heading {
+    margin-top: -25px;
   }
   .hero__container {
     margin: auto;
@@ -200,7 +258,7 @@ body {
   }
   .explore {
     position: relative;
-    padding:15px;
+    padding: 15px;
   }
   .explore-container-gradient-bg {
     position: absolute;
@@ -214,7 +272,7 @@ body {
       #dd2476 51%,
       #ff512f 100%
     );
-    z-index:-5;
+    z-index: -5;
     transform: skewY(-5deg);
   }
 }
@@ -223,7 +281,7 @@ body {
   .container {
     padding: 15px;
   }
-  .explore{
+  .explore {
     margin-top: 5rem;
   }
   .btn-primary {
@@ -232,9 +290,9 @@ body {
     padding: 10px 18px;
     border-radius: 5px;
   }
-  .menu-cards{
-    gap:15px;
-    padding:10px;
+  .menu-cards {
+    gap: 15px;
+    padding: 10px;
   }
   .hero__container {
     margin: auto;
@@ -252,9 +310,9 @@ body {
   .hero__container__image__bg__2 {
     margin-top: -25px;
   }
- 
-  .explore-heading{
-    color:#1d3557;
+
+  .explore-heading {
+    color: #1d3557;
     font-size: 2.7rem;
   }
 }
@@ -283,11 +341,11 @@ body {
   .hero__container__image__bg__2 {
     margin-top: -35px;
   }
-  .menu-cards{
-    padding:15px;
-    gap:25px;
+  .menu-cards {
+    padding: 15px;
+    gap: 25px;
   }
-  .explore-heading{
+  .explore-heading {
     font-size: 3rem;
   }
 }
