--- a/styles/style.css
+++ b/styles/style.css
@@ -169,49 +169,56 @@ body {
 }
 
 .restaurants-heading {
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
+  color: #1d3557;
+  font-size: 1.2rem;
 }
-.row-1,
-.row-2 {
-  width: 100%;
-}
-
 .restaurant-1 img,
 .restaurant-2 img,
 .restaurant-3 img,
 .restaurant-4 img {
   width: 100%;
   height: 100%;
-  border-radius: 8px;
+  border-radius: 3px;
+  object-fit: cover;
 }
 
 .row-1 {
   display: flex;
-  justify-content: space-between;
-  gap: 4px;
+  gap: 8px;
   align-items: baseline;
-  margin-bottom: 4px;
+  margin-bottom: 12px;
 }
 
 .row-2 {
   display: flex;
-  justify-content: space-between;
-  gap: 4px;
+  flex-direction: row-reverse;
+  align-items: flex-start;
+  gap: 8px;
 }
-.restaurants-1 img,
+.restaurant-2 img,
 .restaurant-4 img {
-  width: 100%;
-  height: 150px;
+  /* width: 45%;
+  height: 80px; */
+  width: 200px;
+  height: 100px;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
     0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
-.restaurants-2 img,
+.restaurant-1 img,
 .restaurant-3 img {
-  width: 100%;
-  height: 200px;
+  /* width: 55%;
+  height: 100px; */
+  width: 150px;
+  height: 80px;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
     0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
+
+.restaurant-1 {
+  justify-self: flex-end;
+}
+
 /* end of restaurants section */
 
 /*media queries*/
@@ -269,6 +276,21 @@ body {
     z-index: -5;
     transform: skewY(-5deg);
   }
+
+  .restaurant-2 img,
+  .restaurant-4 img {
+    width: 250px;
+    height: 125px;
+  }
+  .restaurant-1 img,
+  .restaurant-3 img {
+    width: 200px;
+    height: 100px;
+  }
+  .restaurants-heading {
+    margin-top: 5rem;
+    font-size: 1.5rem;
+  }
 }
 
 @media (min-width: 768px) {
@@ -309,6 +331,20 @@ body {
     color: #1d3557;
     font-size: 2.7rem;
   }
+  .restaurants {
+    display: flex;
+    margin-top: 8rem;
+    gap: 30px;
+    align-items: center;
+    justify-content: center;
+  }
+  .restaurants-heading {
+    font-size: 1.2rem;
+    margin-top: 0%;
+    align-self: center;
+    justify-self: center;
+    text-align: center;
+  }
 }
 
 @media (min-width: 992px) {
@@ -342,6 +378,9 @@ body {
   .explore-heading {
     font-size: 3rem;
   }
+  .restaurants-heading {
+    font-size: 1.4rem;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -371,5 +410,20 @@ body {
     line-height: 2.8rem;
     color: #1d3557;
     font-weight: 900;
+  }
+
+  .restaurants-heading {
+    font-size: 2rem;
+    text-align: left;
+  }
+  .restaurant-2 img,
+  .restaurant-4 img {
+    width: 300px;
+    height: 260px;
+  }
+  .restaurant-1 img,
+  .restaurant-3 img {
+    width: 250px;
+    height: 180px;
   }
 }
