--- a/styles/style.css
+++ b/styles/style.css
@@ -198,8 +198,6 @@ body {
 }
 .restaurant-2 img,
 .restaurant-4 img {
-  /* width: 45%;
-  height: 80px; */
   width: 200px;
   height: 100px;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
@@ -207,8 +205,6 @@ body {
 }
 .restaurant-1 img,
 .restaurant-3 img {
-  /* width: 55%;
-  height: 100px; */
   width: 150px;
   height: 80px;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
@@ -220,6 +216,36 @@ body {
 }
 
 /* end of restaurants section */
+
+/* stay updated section */
+.updated {
+  margin-top: 4.5rem;
+  width: 100%;
+  color: #1d3557;
+  margin-bottom: 4.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.updated-heading {
+  font-size: 1.8rem;
+}
+.updated-content {
+  margin-top: 20px;
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+}
+.email {
+  padding: 12px;
+  width: 220px;
+  border-radius: 4px;
+  border: 1px solid #ee89a0;
+  background-color: #fcedf0;
+  font-weight: 700;
+}
+
+/* end of stay updated section */
 
 /*media queries*/
 
@@ -290,6 +316,12 @@ body {
   .restaurants-heading {
     margin-top: 5rem;
     font-size: 1.5rem;
+  }
+  .updated-heading {
+    font-size: 2.3rem;
+  }
+  .email {
+    width: 300px;
   }
 }
 
@@ -381,6 +413,12 @@ body {
   .restaurants-heading {
     font-size: 1.4rem;
   }
+  .email {
+    width: 400px;
+  }
+  .updated-btn{
+    padding:6px 8px;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -425,5 +463,8 @@ body {
   .restaurant-3 img {
     width: 250px;
     height: 180px;
+  }
+  .updated-heading {
+    font-size: 3rem;
   }
 }
