--- a/styles/style.css
+++ b/styles/style.css
@@ -247,6 +247,36 @@ body {
 
 /* end of stay updated section */
 
+.quote {
+  position: relative;
+  margin-top: 4rem;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 200px;
+  width: 100%;
+  border-radius: 13px;
+  background: url(https://images.unsplash.com/photo-1522336572468-97b06e8ef143?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=755&q=80)
+    center center / cover no-repeat;
+  z-index: -3;
+}
+.quote-image-overlay {
+  position: absolute;
+  width: 100%;
+  height: 200px;
+  background-color: #1d3557;
+  opacity: 50%;
+  border-radius: 13px;
+  z-index: -2;
+}
+
+.quote-container {
+  font-size: 1.4rem;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
 /*media queries*/
 
 @media (min-width: 576px) {
@@ -377,6 +407,16 @@ body {
     justify-self: center;
     text-align: center;
   }
+  .quote-container {
+    font-size: 2rem;
+  }
+  .quote {
+    height: 300px;
+    padding:30px;
+  }
+  .quote-image-overlay {
+    height: 300px;
+  }
 }
 
 @media (min-width: 992px) {
@@ -416,8 +456,8 @@ body {
   .email {
     width: 400px;
   }
-  .updated-btn{
-    padding:6px 8px;
+  .updated-btn {
+    padding: 6px 8px;
   }
 }
 
@@ -466,5 +506,8 @@ body {
   }
   .updated-heading {
     font-size: 3rem;
+  }
+  .quote-container {
+    font-size: 2.3rem;
   }
 }
