--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 .container {
@@ -113,6 +112,7 @@ body {
 .explore {
   margin-top: 3.5rem;
   padding: 10px 0;
+  /* overflow-y:auto; */
 }
 .explore-heading {
   text-align: center;
@@ -281,9 +281,9 @@ body {
 /*end of qoute section*/
 
 /* footer */
-.footer{
+.footer {
   margin-top: 5rem;
-  background-image:linear-gradient(
+  background-image: linear-gradient(
     to right,
     #ff512f 0%,
     #dd2476 51%,
@@ -292,24 +292,24 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items:center ;
+  align-items: center;
   text-align: center;
   border-radius: 12px;
 }
-.footer-logo{
-  width:60%;
+.footer-logo {
+  width: 60%;
 }
-.footer-logo img{
-  width:100%;
-  filter:brightness(0) invert(1);
+.footer-logo img {
+  width: 100%;
+  filter: brightness(0) invert(1);
 }
-.footer-content ul{
+.footer-content ul {
   list-style-type: none;
   font-size: 1.2rem;
   color: #fff;
-  padding-bottom:40px;
+  padding-bottom: 40px;
 }
-.footer-content ul li{
+.footer-content ul li {
   margin-bottom: 6px;
   cursor: pointer;
 }
@@ -317,20 +317,21 @@ body {
 /*media queries*/
 
 @media (min-width: 576px) {
-  .explore-heading {
-    margin-top: -25px;
-  }
   .hero__container {
     margin: auto;
     width: 80%;
     margin-top: 1rem;
   }
+
   .menu-cards {
     display: flex;
     gap: 12px;
     margin-top: 35px;
   }
 
+  .explore-heading {
+    margin-top: -25px;
+  }
   .explore-btn {
     margin: auto;
     margin-top: 10px;
@@ -367,7 +368,7 @@ body {
       #ff512f 100%
     );
     z-index: -5;
-    transform: skewY(-5deg);
+    transform: skewY(-5deg) !important;
   }
 
   .restaurant-2 img,
@@ -390,18 +391,18 @@ body {
   .email {
     width: 300px;
   }
-  .footer{
+  .footer {
     flex-direction: row;
     justify-content: space-evenly;
-    padding:40px;
+    padding: 40px;
   }
-  .footer-logo{
-    width:45%;
+  .footer-logo {
+    width: 45%;
   }
-  .footer-content{
+  .footer-content {
     text-align: left;
   }
-  .footer-content ul{
+  .footer-content ul {
     padding-bottom: 0%;
   }
 }
@@ -463,16 +464,16 @@ body {
   }
   .quote {
     height: 300px;
-    padding:30px;
+    padding: 30px;
   }
   .quote-image-overlay {
     height: 300px;
   }
-  .footer{
-    padding:0;
+  .footer {
+    padding: 0;
   }
-  .footer-logo{
-    width:300px;
+  .footer-logo {
+    width: 300px;
   }
 }
 
